--- a/part3/puhelinluettelo/web-app/package.json
+++ b/part3/puhelinluettelo/web-app/package.json
@@ -35,6 +35,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.10.0",
+    "eslint-plugin-react": "^7.21.3",
     "json-server": "^0.16.1"
   }
 }
