--- a/part4/blogilista/package.json
+++ b/part4/blogilista/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "lint": "eslint --fix .",
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +15,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.7"
+  },
+  "devDependencies": {
+    "eslint": "^7.10.0",
+    "jest": "^26.4.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
