--- a/part4/blogilista/package.json
+++ b/part4/blogilista/package.json
@@ -12,16 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.10.7"
+    "mongoose": "^5.10.8"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
-    "jest": "^26.4.2",
+    "jest": "^26.5.2",
     "supertest": "^5.0.0"
   },
   "jest": {
