--- a/part4/blogilista/package.json
+++ b/part4/blogilista/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.10.8"
+    "mongoose": "^5.10.8",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^7.10.0",
