--- a/part4/blogilista/.eslintrc.json
+++ b/part4/blogilista/.eslintrc.json
@@ -1,9 +1,9 @@
 {
     "env": {
-        "browser": true,
         "commonjs": true,
         "es2021": true,
-        "jest": true
+        "jest": true,
+        "node": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
