--- a/part6/unicafe-redux/package.json
+++ b/part6/unicafe-redux/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "devDependencies": {
-    "deep-freeze": "0.0.1"
+    "deep-freeze": "0.0.1",
+    "eslint-plugin-jest": "^24.1.0"
   }
 }
