--- a/part6/redux-anecdotes/package.json
+++ b/part6/redux-anecdotes/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-jest": "^24.1.0"
+    "eslint-plugin-jest": "^24.1.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
