--- a/part9/9b/package.json
+++ b/part9/9b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "lint": "eslint --fix .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "calculateBmi": "nodemon ./src/bmiCalculator.ts",
     "calculateExercises": "nodemon ./src/exerciseCalculator.ts"
@@ -11,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.14.10",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "eslint": "^7.14.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   }
