--- a/part9/9b/package.json
+++ b/part9/9b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "lint": "eslint --fix .",
+    "dev": "ts-node-dev index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "calculateBmi": "nodemon ./src/bmiCalculator.ts",
     "calculateExercises": "nodemon ./src/exerciseCalculator.ts"
@@ -12,11 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "eslint": "^7.14.0",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
