--- a/part9/9b/package.json
+++ b/part9/9b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "lint": "eslint --fix .",
+    "lint": "eslint --fix --ext .ts .",
     "dev": "ts-node-dev index.ts",
     "start": "NODE_ENV=production ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
