--- a/part9/9b/.eslintrc.json
+++ b/part9/9b/.eslintrc.json
@@ -2,20 +2,29 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
+        "node": true,
+        "es6": true
     },
     "extends": [
         "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended-requiring-type-checking"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 12
+        "ecmaVersion": 12,
+        "project": "./tsconfig.json"
     },
     "plugins": [
         "@typescript-eslint"
     ],
     "rules": {
+      "@typescript-eslint/semi": ["error"],
+      "@typescript-eslint/no-explicit-any": 2,
+      "@typescript-eslint/explicit-function-return-type": 0,
+      "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+      "no-case-declarations": 0,
       "indent": [
           "error",
           2
