--- a/part9/patientor/server/package.json
+++ b/part9/patientor/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev server.ts",
+    "dev": "ts-node-dev src/server.ts",
     "lint": "eslint --fix --ext .ts .",
     "start": "node build/server.js"
   },
