--- a/part9/patientor/server/.eslintrc
+++ b/part9/patientor/server/.eslintrc
@@ -16,7 +16,32 @@
         "error", { "argsIgnorePattern": "^_" }
     ],
      "@typescript-eslint/no-explicit-any": 1,
-    "no-case-declarations": 0
+    "no-case-declarations": 0,
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "eqeqeq": ["error", "always", {"null": "ignore"}],
+    "no-trailing-spaces": ["error", {"ignoreComments": true}],
+    "object-curly-spacing": ["error", "always"],
+    "arrow-spacing": ["error", { "before": true, "after": true }],
+    "eol-last": ["error", "always"],
+    "no-multi-spaces": ["error"],
+    "array-bracket-spacing": ["error", "always"],
+    "brace-style": ["error", "1tbs"],
+    "implicit-arrow-linebreak": ["error", "beside"],
+    "key-spacing": ["error", { "afterColon": true }],
+    "space-before-blocks": ["error", "always"],
+    "space-before-function-paren": ["error", "always"],
+    "space-infix-ops": ["error"],
+    "no-var": ["error"],
+    "comma-dangle": ["error", "never"],
+    "comma-spacing": ["error", { "before": false, "after": true }],
+    "comma-style": [ "error", "last"],
+    "dot-location": ["error", "property"],
+    "keyword-spacing": "error",
+    "lines-between-class-members": ["error", "always"],
+    "newline-per-chained-call": ["error", { "ignoreChainWithDepth": 2 }]
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
